# high-dimensional-genomics-ml

./: .gitignore  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  leukemia_sample.csv
notebooks/: demo.ipynb
results/: metrics.json
scripts/: analyze.py  benchmark.py  download_data.py
src/hdgenomics/: __init__.py  classify.py  data.py  dimreduce.py  preprocess.py  stats.py
tests/: test_hdgenomics.py
